--- a/Сalculator/MainWindow.xaml
+++ b/Сalculator/MainWindow.xaml
@@ -14,7 +14,7 @@
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
-            <RowDefinition Height="69.6"/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -39,13 +39,13 @@
             Grid.Row="5" Grid.ColumnSpan="2">
             <Button
                 Height="{Binding MyBorder.Height}" 
-                Content="0" Background="Transparent" BorderBrush="Black" Margin="0,-5,-1,-5" Click="NumberClick0"/>
+                Content="0" Background="Transparent" BorderBrush="Black" Margin="0,-5,-1,-5"  Click="NumberClick0"/>
         </Border>
         <Button Grid.Column="2" Grid.Row="5" FontSize="20" FontWeight="Medium" BorderBrush="#292929" Background="#292929" Foreground="Wheat" HorizontalAlignment="Center" Style="{DynamicResource MaterialDesignFloatingActionButton}" Click="VirguleClick">,</Button>
         <Button Grid.Column="5" Grid.Row="5" FontSize="20" BorderBrush="#ff921f" FontWeight="Medium" Background="#ff921f" Foreground="Wheat" HorizontalAlignment="Center" Style="{DynamicResource MaterialDesignFloatingActionButton}" Click="EgaleClick">=</Button>
         <Button Grid.Column="4" Grid.Row="4" FontSize="20" BorderBrush="#ff921f" FontWeight="Medium" Background="#ff921f" Foreground="Wheat" HorizontalAlignment="Center" Style="{DynamicResource MaterialDesignFloatingActionButton}" Click="PlusClick">+</Button>
         <Button Grid.Column="4" Grid.Row="3" FontSize="20" BorderBrush="#ff921f" FontWeight="Medium" Background="#ff921f" Foreground="Wheat" HorizontalAlignment="Center" Style="{DynamicResource MaterialDesignFloatingActionButton}" Click="MinusClick">-</Button>
-        <Button Grid.Column="4" Grid.Row="2" BorderBrush="#ff921f" FontSize="20" FontWeight="Medium" Background="#ff921f" Foreground="Wheat" HorizontalAlignment="Center" Style="{DynamicResource MaterialDesignFloatingActionButton}" Click="MultiplyClick">*</Button>
+        <Button Grid.Column="4" Grid.Row="2" BorderBrush="#ff921f" FontSize="20" FontWeight="Medium" Background="#ff921f" Foreground="Wheat" HorizontalAlignment="Center" Style="{DynamicResource MaterialDesignFloatingActionButton}" Click="MultiplyClick">x</Button>
         <Button Grid.Column="4" Grid.Row="1" BorderBrush="#ff921f" FontSize="20" FontWeight="Medium" Background="#ff921f" Foreground="Wheat" HorizontalAlignment="Center" Style="{DynamicResource MaterialDesignFloatingActionButton}" Click="DivideClick">/</Button>
         <Button Grid.Column="0" Grid.Row="1" BorderBrush="#9e9d9d" FontSize="20" FontWeight="Medium" Background="#9e9d9d" Foreground="Black" HorizontalAlignment="Center" Style="{DynamicResource MaterialDesignFloatingActionButton}" Click="ButtonAC">AC</Button>
         <Button Grid.Column="2" Grid.Row="1" BorderBrush="#9e9d9d" FontSize="20" FontWeight="Medium" Background="#9e9d9d" Foreground="Black" HorizontalAlignment="Center" Style="{DynamicResource MaterialDesignFloatingActionButton}" Click="PercentageClick">%</Button>
